# mystic-params-gen

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.github/: dependabot.yaml
.github/workflows/: stale.yaml
include/: test_dummy.hpp
src/: main.cpp  test_dummy.cpp
tests/: test_main.cpp
